--- a/sidebar-menu/styles_one.css
+++ b/sidebar-menu/styles_one.css
@@ -16,6 +16,14 @@ body {
     inset: 20px 0 20px 20px;
     width: 75px;
     background: #FFF;
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navigation.open {
+    width: 250px;
 }
 
 .navigation .menuToggle {
@@ -42,6 +50,10 @@ body {
     transition: 0.5s;
 }
 
+.navigation.open .menuToggle::before {
+    transform: translateY(0px) rotate(45deg);
+}
+
 .navigation .menuToggle::after {
     content: '';
     position: absolute;
@@ -51,4 +63,50 @@ body {
     transform: translateY(8px);
     transition: 0.5s;
     box-shadow: 0 -8px 0 #333;
+}
+
+.navigation.open .menuToggle::after {
+    transform: translateY(0px) rotate(-45deg);
+    box-shadow: 0 0 0 #333;
+}
+
+.navigation ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+
+.navigation ul li {
+    list-style: none;
+    position: relative;
+    width: 100%;
+    height: 60px;
+    padding: 0 10px;
+    transition: 0.5;
+}
+
+.navigation ul li a {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: center;
+    text-decoration: none;
+}
+
+.navigation ul li a .icon {
+    position: relative;
+    display: block;
+    min-width: 55px;
+    height: 55px;
+    line-height: 60px;
+    transition: 0.5s;
+    border-radius: 10px;
+    font-size: 1.75em;
+    color: #222;
+}
+
+.navigation ul li.active a .icon {
+    color: var(--clr);
 }
